[metadata]
description = PyQt Application Deployment Tool
long_description = file: README
author = Riverbank Computing Limited
author_email = info@riverbankcomputing.com
url = https://www.riverbankcomputing.com/software/pyqtdeploy/
platforms = X11, macOS, Windows

[egg_info]
tag_build = 
tag_date = 0

