# Specify the build system requirements.
[build-system]
requires = ["sip >=5.3, <7", "PyQt-builder >=1.6, <2"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "PyQt3D"
version = "5.15.2"
summary = "Python bindings for the Qt 3D framework"
home-page = "https://www.riverbankcomputing.com/software/pyqt3d/"
author = "Riverbank Computing Limited"
author-email = "info@riverbankcomputing.com"
license = "GPL v3"
requires-dist = "PyQt5 (>=5.15)"
description-file = "README"

# Specify a PyQt-based project.
[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

# Configure the project.
[tool.sip.project]
tag-prefix = "Qt3D"

# Define and configure each set of bindings.
[tool.sip.bindings.Qt3DCore]
qmake-QT = ["3dcore"]

[tool.sip.bindings.Qt3DInput]
qmake-QT = ["3dinput"]

[tool.sip.bindings.Qt3DLogic]
qmake-QT = ["3dlogic"]

[tool.sip.bindings.Qt3DRender]
qmake-QT = ["3drender"]

[tool.sip.bindings.Qt3DAnimation]
qmake-QT = ["3danimation"]

[tool.sip.bindings.Qt3DExtras]
qmake-QT = ["3dextras"]
